# docs/swagger.json
@@ -1,12 +1,21 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "gin-skeleton 示例项目",
+        "title": "gin-skeleton",
+        "contact": {},
+        "version": "1.0"
     },
+    "host": "127.0.0.1:8081",
     "paths": {
-        "/api/user/create": {
+        "/api/auth/refresh": {
             "post": {
-                "description": "用户创建",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "刷新令牌",
                 "consumes": [
                     "application/json"
                 ],
@@ -14,9 +23,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "用户管理"
+                    "授权管理"
                 ],
-                "summary": "用户创建",
+                "summary": "刷新令牌",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -27,9 +36,9 @@
                 }
             }
         },
-        "/api/user/details": {
-            "get": {
-                "description": "用户详情",
+        "/api/auth/token": {
+            "post": {
+                "description": "令牌创建",
                 "consumes": [
                     "application/json"
                 ],
@@ -37,17 +46,53 @@
                     "application/json"
                 ],
                 "tags": [
-                    "用户管理"
+                    "授权管理"
                 ],
-                "summary": "用户详情",
+                "summary": "令牌创建",
+                "parameters": [
+                    {
+                        "description": "用户名, 密码",
+                        "name": "params",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CreateAuthTokenRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.User"
-                            }
+                            "$ref": "#/definitions/response.Result"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/auth/user": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "获取用户信息",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "授权管理"
+                ],
+                "summary": "获取用户信息",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Result"
                         }
                     }
                 }
@@ -55,35 +100,19 @@
         }
     },
     "definitions": {
-        "model.User": {
+        "request.CreateAuthTokenRequest": {
             "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
             "properties": {
-                "create_at": {
-                    "description": "创建时间",
-                    "type": "integer"
-                },
-                "id": {
-                    "description": "ID",
-                    "type": "integer"
-                },
-                "nickname": {
-                    "description": "用户呢称",
-                    "type": "string"
-                },
                 "password": {
-                    "description": "密码",
+                    "description": "登陆密码",
                     "type": "string"
-                },
-                "phone": {
-                    "description": "手机号",
-                    "type": "string"
-                },
-                "updated_at": {
-                    "description": "更新时间",
-                    "type": "integer"
                 },
                 "username": {
-                    "description": "用户名称",
+                    "description": "登陆用户",
                     "type": "string"
                 }
             }
@@ -103,6 +132,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
